[gd_scene load_steps=15 format=3 uid="uid://cy5lfvsid6vwu"]

[ext_resource type="Script" uid="uid://61t0wsqhfxc1" path="res://UpgradeComponents/Dragonfly/dragon_fly.gd" id="1_3dpjo"]
[ext_resource type="Texture2D" uid="uid://rg0xj8yadmtk" path="res://Levels/WoodsMap/WoodsDragonflyFlying1.svg" id="2_jed6x"]
[ext_resource type="Texture2D" uid="uid://2apeii8qvtgy" path="res://Levels/WoodsMap/WoodsDragonflyFlying2.svg" id="3_pbkyr"]
[ext_resource type="Texture2D" uid="uid://ccyht1gadesw8" path="res://Levels/WoodsMap/WoodsDragonflyFlying3.svg" id="4_x6fwy"]
[ext_resource type="Texture2D" uid="uid://dnbllgiivo7ym" path="res://VisualEffects/ParticleSprite.svg" id="5_pbkyr"]
[ext_resource type="AudioStream" uid="uid://cv4d5sifsf78f" path="res://UpgradeComponents/Dragonfly/dragonfly.wav" id="6_op7pb"]
[ext_resource type="AudioStream" uid="uid://bagy42p68h0t8" path="res://UpgradeComponents/Dragonfly/CollectDragonfly.wav" id="7_qqwiq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_op7pb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jed6x")
}, {
"duration": 1.0,
"texture": ExtResource("3_pbkyr")
}, {
"duration": 1.0,
"texture": ExtResource("4_x6fwy")
}],
"loop": true,
"name": &"default",
"speed": 60.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jed6x"]
radius = 54.4518

[sub_resource type="Curve" id="Curve_x6fwy"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.532172, 0.939201), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_pbkyr"]
offsets = PackedFloat32Array(0.31044, 1)
colors = PackedColorArray(0.25, 0.25, 0.25, 1, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_x6fwy"]
resource_name = "collected_anim"
length = 1.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/CPUParticles2D:amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/CPUParticles2D:lifetime")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.65]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/CPUParticles2D:initial_velocity_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [148.1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/CPUParticles2D:initial_velocity_max")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [305.4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.25, 0.35, 0.45, 0.6, 0.75, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1), Vector2(-1, 1), Vector2(1e-05, 1), Vector2(1, 1), Vector2(1e-05, 1), Vector2(-1, 1), Vector2(1e-05, 1), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D/CPUParticles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jed6x"]
resource_name = "zip_around_anim"
length = 4.0
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8, 1.4, 1.8, 2.2, 2.6, 3.6),
"transitions": PackedFloat32Array(1, 0.450625, 1, 0.554785, 1, 0.406126, 1, 0.366022),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(25, -27), Vector2(25, -27), Vector2(-79, -12), Vector2(-79, -12), Vector2(-36, 35), Vector2(-36, 35)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x6fwy"]
_data = {
&"collected_anim": SubResource("Animation_x6fwy"),
&"zip_around_anim": SubResource("Animation_jed6x")
}

[node name="DragonFly" type="Node2D"]
z_index = 53
z_as_relative = false
script = ExtResource("1_3dpjo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-79, -12)
scale = Vector2(1e-05, 1)
sprite_frames = SubResource("SpriteFrames_op7pb")
autoplay = "default"

[node name="DragonFlyArea" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 0
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/DragonFlyArea"]
position = Vector2(7, 9)
shape = SubResource("CircleShape2D_jed6x")

[node name="CPUParticles2D" type="CPUParticles2D" parent="AnimatedSprite2D"]
show_behind_parent = true
position = Vector2(8, 9)
emitting = false
amount = 30
texture = ExtResource("5_pbkyr")
lifetime = 0.65
emission_shape = 1
emission_sphere_radius = 57.75
spread = 180.0
gravity = Vector2(-30, -30)
initial_velocity_min = 148.1
initial_velocity_max = 305.4
scale_amount_min = 0.2
scale_amount_curve = SubResource("Curve_x6fwy")
color = Color(0.97, 0.97, 0.97, 1)
color_initial_ramp = SubResource("Gradient_pbkyr")

[node name="FlyAwayTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="DragonFlyAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x6fwy")
}
autoplay = "zip_around_anim"

[node name="FlyAwaySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_op7pb")

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qqwiq")

[connection signal="area_entered" from="AnimatedSprite2D/DragonFlyArea" to="." method="_on_dragon_fly_area_area_entered"]
